fixed form on safari

--- a/wsgi/static/search/sass/style.scss
+++ b/wsgi/static/search/sass/style.scss
@@ -97,8 +97,8 @@ body{
             }
         }
 
-        .hidden{
-            display: hidden;
+        .inp-hidden{
+            visibility: hidden;
         }
     }
 
